05/src/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-dep
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              name: nginx-port

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-dep
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: mtool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
              name: mtool-port
