05/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netology-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kubetest.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 9002
